<resources>
    <string name="app_name">CatedRApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    FRAGMENT SPLASH INIT-->
    <string name="splash_desc_image">Logo de aplicación</string>
    <string name="splash_text_error_service_data">No se pudo obtener la información del servidor.</string>
    <!--    FRAGMENT SPLASH END-->

    <!--    FRAGMENT LOGIN INIT-->
    <string name="login_desc_image_title">Título de aplicación</string>
    <string name="login_text_mail">Correo</string>
    <string name="login_text_nickname">Alias</string>
    <string name="login_text_age">Edad</string>
    <string name="login_text_before_terms_and_cond">Al continuar has leído y aceptas nuestros</string>
    <string name="login_text_terms_and_conditions">Términos y condiciones</string>
    <string name="login_btn_login">Ingresar</string>
    <string name="login_text_login_with">o ingresa con</string>
    <string name="login_desc_image_fb">Ingresar con Facebook</string>
    <string name="login_desc_image_google">Ingresar con Google</string>
    <string name="login_text_error_mail">Ingrese un correo válido</string>
    <string name="login_text_error_service_user">No se pudo almacenar la información del usuario. Inténtelo nuevamente</string>
    <!--    FRAGMENT LOGIN END-->

    <!--    FRAGMENT MAIN INIT-->
    <string name="main_desc_menu">Ingresar al menú</string>
    <string name="main_desc_photo">Tomar foto</string>
    <string name="main_desc_logout">Salir de aplicación</string>
    <string name="main_desc_avatar">Detalle de usuario</string>
    <string name="main_text_level_dummy">6</string>
    <string name="main_text_nickname_dummy">Augusto Alva</string>
    <string name="main_text_add_score">Puntos por información adicional</string>
    <string name="main_text_score_dummy">+10</string>
    <!--    FRAGMENT MAIN END-->

    <!--    FRAGMENT MENU INIT-->
    <string name="menu_desc_close">Cerrar Menú</string>
    <!--    FRAGMENT MENU END-->

    <!--    FRAGMENT MENU GOALS ITEM INIT-->
    <string name="menu_goals_desc_star">Estrella</string>
    <!--    FRAGMENT MENU GOALS ITEM END-->

    <!--    FRAGMENT DETAIL INIT-->
    <string name="detail_text_level">NIVEL</string>
    <string name="detail_text_score">PUNTOS</string>
    <string name="detail_desc_coin">Moneda</string>
    <string name="detail_text_user_info">DATOS DE USUARIO</string>
    <string name="detail_text_mail">CORREO</string>
    <string name="detail_text_nickname">ALIAS</string>
    <!--    FRAGMENT DETAIL END-->

    <!--    MODAL INFO INIT-->
    <string name="info_desc_close">Cerrar ventana</string>
    <string name="info_desc_icon">Icono modal</string>
    <string name="info_title_dummy">Sabías que &#8230;</string>
    <string name="info_description_dummy">La imagen de Nuestra Señora de la Evangelización es una escultura de la Virgen María con el Niño Jesús en los brazos</string>
    <!--    MODAL INFO END-->

    <!--    MODAL QUESTION INIT-->
    <string name="question_desc_close">Cerrar ventana</string>
    <string name="question_desc_icon">Icono modal</string>
    <string name="question_title_dummy">¿Cómo se llama el primer Papa que visitó el Perú?</string>
    <string name="question_first_option_dummy">LUIS IV</string>
    <string name="question_second_option_dummy">CARLOS V</string>
    <string name="question_third_option_dummy">JUAN II</string>
    <string name="question_fourth_option_dummy">LUIS V</string>
    <!--    MODAL QUESTION END-->

    <!--    MODAL QUESTION RIGHT INIT-->
    <string name="question_right_desc_close">Cerrar ventana</string>
    <string name="question_right_desc_icon">Icono modal</string>
    <string name="question_right_desc_star">Decor Image</string>
    <string name="question_right_title">Respuesta correcta</string>
    <string name="question_right_response_dummy">LUIS IV llegó al Perú en el año 1727</string>
    <!--    MODAL QUESTION RIGHT END-->

    <!--    MODAL QUESTION WRONG INIT-->
    <string name="question_wrong_desc_close">Cerrar ventana</string>
    <string name="question_wrong_desc_icon">Icono modal</string>
    <string name="question_wrong_title">Respuesta incorrecta</string>
    <string name="question_wrong_response_dummy">LUIS IV llegó al Perú en el año 1727</string>
    <!--    MODAL QUESTION WRONG END-->

    <!--    MODAL EXIT INIT-->
    <string name="exit_text_question">¿Está seguro que desea salir de la aplicación?</string>
    <string name="exit_text_logout">Salir</string>
    <string name="exit_text_cancel">Cancelar</string>
    <!--    MODAL EXIT END-->

    <!--    MODAL EXIT INIT-->
    <string name="rating_text_title">Valora nuestra APP y déjanos un comentario</string>
    <string name="rating_text_message">Mensaje</string>
    <string name="rating_btn_assess">Valorar</string>
    <!--    MODAL EXIT END-->

    <!--    MODAL SHARE INIT-->
    <string name="share_text_title">Gracias por compartir contenido de la aplicación</string>
    <string name="share_btn_close">Cerrar</string>
    <!--    MODAL SHARE END-->

    <string name="fit_image_to_scan">Ajuste la imagen para escanear</string>

</resources>
