<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/modal_style_border_ar_modal"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="4dp">

    <ImageView
        android:id="@+id/imgInfoClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/info_desc_close"
        android:src="@drawable/modal_info_close" />

    <TextView
        android:id="@+id/txtInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="36dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"
        android:text="@string/exit_text_question"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_weight="0.5"
            android:background="@drawable/modal_style_exit_first_button"
            android:text="@string/exit_text_logout"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginStart="13dp"
            android:layout_weight="0.5"
            android:background="@drawable/modal_style_exit_second_button"
            android:text="@string/exit_text_cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>