<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.LoginFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:gravity="bottom|center_horizontal">

                <ImageView
                    android:id="@+id/img_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/login_desc_image_title"
                    android:src="@drawable/login_title" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_weight="0.6"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/login_text_mail"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/login_style_state_edittext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:minLines="1"
                    android:textColor="@color/login_edittext_text"
                    android:textSize="13sp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/login_text_nickname"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtNickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/login_style_state_edittext"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:minLines="1"
                    android:maxLength="10"
                    android:textColor="@color/login_edittext_text"
                    android:textSize="13sp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/login_text_age"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="23dp"
                    android:background="@drawable/login_style_state_edittext"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLines="1"
                    android:minLines="1"
                    android:maxLength="3"
                    android:textColor="@color/login_edittext_text"
                    android:textSize="13sp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_text_before_terms_and_cond"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="23dp"
                    android:gravity="center"
                    android:text="@string/login_text_terms_and_conditions"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_style_state_button"
                    android:enabled="false"
                    android:text="@string/login_btn_login"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="0.2"
                android:orientation="vertical"
                android:visibility="visible">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/white"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/login_text_login_with" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="45dp"
                        android:contentDescription="@string/login_desc_image_fb"
                        android:src="@drawable/login_fb" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/login_desc_image_google"
                        android:src="@drawable/login_google" />
                </LinearLayout>

            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/linearProgressLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/login_background_blur"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:indeterminateDrawable="@drawable/main_style_progress_indeterminate" />
        </LinearLayout>
    </FrameLayout>

</layout>